# wasm-excel-exporte

./: .appveyor.yml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  EXAMPLES.md  LICENSE_MIT  README.md  build.sh  test-runner.js  wasm-bindgen.toml
.agent/rules/: project-rules.md
.cargo/: config.toml
.cursor/rules/: projectrules.mdc
.github/: copilot-commit-message-instructions.md  copilot-instructions.md
.github/workflows/: ci.yml
.kiro/steering/: project-rules.md
.trae/rules/: project_rules.md
examples/: README.md  advanced-features.html  basic-export.html  data-generator-worker.js  index.html  progress-export.html  unified-api.html  virtual-scroll-export.html
src/: batch_export.rs  core.rs  lib.rs  resource.rs  utils.rs  validation.rs
src/core/: README.md  export_csv.rs  export_xlsx.rs  mod.rs  table_extractor.rs
tests/: BUILD_REPORT.md  README.md  lib_tests.rs  test-all.sh  test-page.html  test_resource.rs  test_unified_api.rs  unit_tests.rs  validation_tests.rs  web.rs
tests/browser/: test-all-fixed.sh  test-all.sh  test-runner.js  web_original.rs
tests/fixtures/: test-page.html
