[package]
name = "wasm-excel-exporter"
version = "1.0.0"
authors = ["Kurisu <makise_kurisuu@outlook.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlTableElement", "HtmlTableRowElement", "HtmlTableCellElement", "Document", "Element", "HtmlElement", "Node", "Window", "Url", "Blob", "HtmlCollection", "HtmlAnchorElement", "BlobPropertyBag"] }
js-sys = "0.3"
csv = "1.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
