[package]
name = "wasm-excel-exporter"
version = "1.2.1"
authors = ["Kurisu <makise_kurisuu@outlook.jp>"]
edition = "2024"
description = "一个安全高效的 WebAssembly 库，用于将 HTML 表格数据导出为 CSV 文件"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kurisu994/wasm-excel-exporte"
keywords = ["wasm", "csv", "export", "table", "webassembly"]
categories = ["wasm", "web-programming", "encoding"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.83", features = ["HtmlTableElement", "HtmlTableRowElement", "HtmlTableCellElement", "Document", "Element", "HtmlElement", "Node", "Window", "Url", "Blob", "HtmlCollection", "HtmlAnchorElement", "BlobPropertyBag", "console"] }
js-sys = "0.3.83"
csv = "1.4.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.56"
